# OxygenDynamicCognition.skill

./: .gitignore  ARCHITECTURE_OPTIMIZATION.md  CHANGELOG.md  CODE_AUDIT_REPORT.md  MULTI_PLATFORM_COMPATIBILITY.md  README.md  SKILL.md  SKILL_zh.md  dynamic_cognition_v26.py  pyproject.toml
references/: cognitive_levels.md  research_background.md
scripts/: __init__.py  dynamic_cognition.py  dynamic_cognition_v2.py  dynamic_cognition_v21.py  dynamic_cognition_v26.py  llm_backend.py  odc_agent.py  prompt_library.py  prompt_library_v2.py  test_v21.py  test_v26.py
tests/: test_odc_alpha9.py
