[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "oxygen-dynamic-cognition"
version = "26.0.0-alpha.9"
description = "ODC — Oxygen Dynamic Cognition: multi-level dynamic cognitive reasoning engine for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "StarsailsClover", email = "starsailsclover@github.com"},
]
keywords = ["ai", "agent", "cognition", "dynamic", "reasoning", "odc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.0"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/StarsailsClover/OxygenDynamicCognition"
Repository = "https://github.com/StarsailsClover/OxygenDynamicCognition"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
